tests/fixtures/errors/e0103_unknown_type.mimz
// expect: E0103
module M {
  out y: Foo
  y = 0
}
